@@ -1,33 +1,58 @@
 // Copyright (c) YugaByte, Inc.
 package com.yugabyte.yw.commissioner.tasks;
 
+import com.google.api.client.util.Throwables;
 import com.yugabyte.yw.commissioner.BaseTaskDependencies;
+import com.yugabyte.yw.commissioner.ITask;
 import com.yugabyte.yw.commissioner.UserTaskDetails;
+import com.yugabyte.yw.commissioner.tasks.subtasks.xcluster.XClusterConfigModifyTables;
+import com.yugabyte.yw.common.DrConfigStates.SourceUniverseState;
+import com.yugabyte.yw.common.DrConfigStates.State;
+import com.yugabyte.yw.common.DrConfigStates.TargetUniverseState;
+import com.yugabyte.yw.common.KubernetesUtil;
 import com.yugabyte.yw.common.Util;
+import com.yugabyte.yw.common.XClusterUniverseService;
+import com.yugabyte.yw.common.config.GlobalConfKeys;
+import com.yugabyte.yw.common.config.UniverseConfKeys;
+import com.yugabyte.yw.common.services.YBClientService;
 import com.yugabyte.yw.forms.BackupRequestParams;
 import com.yugabyte.yw.forms.BackupTableParams;
+import com.yugabyte.yw.forms.DrConfigCreateForm;
 import com.yugabyte.yw.forms.RestoreBackupParams;
 import com.yugabyte.yw.forms.XClusterConfigCreateFormData;
+import com.yugabyte.yw.forms.XClusterConfigCreateFormData.BootstrapParams.BootstrapBackupParams;
 import com.yugabyte.yw.models.Backup;
-import com.yugabyte.yw.models.Backup.BackupCategory;
 import com.yugabyte.yw.models.Customer;
+import com.yugabyte.yw.models.PitrConfig;
+import com.yugabyte.yw.models.Restore;
 import com.yugabyte.yw.models.Universe;
 import com.yugabyte.yw.models.XClusterConfig;
+import com.yugabyte.yw.models.XClusterConfig.ConfigType;
 import com.yugabyte.yw.models.XClusterConfig.XClusterConfigStatusType;
+import com.yugabyte.yw.models.XClusterNamespaceConfig;
+import com.yugabyte.yw.models.XClusterNamespaceConfig.Status;
+import com.yugabyte.yw.models.XClusterTableConfig;
 import java.io.File;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.TimeUnit;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
+import javax.annotation.Nullable;
 import javax.inject.Inject;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
 import org.yb.CommonTypes;
-import org.yb.client.ListTablesResponse;
+import org.yb.CommonTypes.TableType;
+import org.yb.client.IsXClusterBootstrapRequiredResponse;
 import org.yb.client.YBClient;
 import org.yb.master.MasterDdlOuterClass;
 import org.yb.master.MasterTypes;
@@ -36,10 +61,102 @@ import org.yb.master.MasterTypes;
 public class CreateXClusterConfig extends XClusterConfigTaskBase {
 
   public static final long TIME_BEFORE_DELETE_BACKUP_MS = TimeUnit.DAYS.toMillis(1);
+  private static final long DELAY_BETWEEN_RETRIES_MS = TimeUnit.SECONDS.toMillis(10);
 
   @Inject
-  protected CreateXClusterConfig(BaseTaskDependencies baseTaskDependencies) {
-    super(baseTaskDependencies);
+  protected CreateXClusterConfig(
+      BaseTaskDependencies baseTaskDependencies, XClusterUniverseService xClusterUniverseService) {
+    super(baseTaskDependencies, xClusterUniverseService);
+  }
+
+  public List<Restore> restoreList = new ArrayList<>();
+
+  public List<Backup> backupList = new ArrayList<>();
+
+  public Map<String, Boolean> dbIdBootstrapRequiredMap = new HashMap<>();
+
+  protected boolean checkBootstrapRequired(
+      String dbId,
+      YBClientService ybService,
+      Universe sourceUniverse,
+      XClusterConfig xClusterConfig) {
+    if (dbIdBootstrapRequiredMap.containsKey(dbId)) {
+      log.debug(
+          "Db: {} requires bootstrapping: {} from cache.",
+          dbId,
+          dbIdBootstrapRequiredMap.get(dbId));
+      return dbIdBootstrapRequiredMap.get(dbId);
+    }
+
+    Duration xclusterWaitTimeout =
+        confGetter.getConfForScope(sourceUniverse, UniverseConfKeys.xclusterSetupAlterTimeout);
+
+    try (YBClient client =
+        ybService.getClient(
+            sourceUniverse.getMasterAddresses(), sourceUniverse.getCertificateNodetoNode())) {
+      List<String> lastErrors = new ArrayList<>();
+      boolean result =
+          doWithConstTimeout(
+              DELAY_BETWEEN_RETRIES_MS,
+              xclusterWaitTimeout.toMillis(),
+              () -> {
+                try {
+                  lastErrors.clear();
+                  IsXClusterBootstrapRequiredResponse completionResponse =
+                      client.isXClusterBootstrapRequired(
+                          xClusterConfig.getReplicationGroupName(), dbId);
+
+                  if (completionResponse.hasError()) {
+                    lastErrors.add(
+                        String.format(
+                            "Master error: %s when fetching isXClusterBootstrapRequired for db %s",
+                            completionResponse.errorMessage(), dbId));
+                  }
+
+                  log.debug(
+                      "CheckBootstrapRequired, checkpointing status is complete: {}, for universe:"
+                          + " {}, xClusterConfig: {}, dbId: {}",
+                      !completionResponse.isNotReady(),
+                      sourceUniverse.getUniverseUUID(),
+                      xClusterConfig.getName(),
+                      dbId);
+
+                  if (completionResponse.isNotReady()) {
+                    lastErrors.add(
+                        String.format(
+                            "Db %s should be finished checkpointing otherwise isBootstrapRequired"
+                                + " bit is not set",
+                            dbId));
+                  }
+                  if (lastErrors.isEmpty()) {
+                    dbIdBootstrapRequiredMap.put(
+                        dbId, completionResponse.itInitialBootstrapRequired());
+                    log.debug(
+                        "Bootstrap required for db {}: {}",
+                        dbId,
+                        completionResponse.itInitialBootstrapRequired());
+                  }
+                  log.debug(
+                      "Last errors for checking db: {} if needs boostrapping: {}",
+                      dbId,
+                      lastErrors);
+                  return lastErrors.isEmpty();
+                } catch (Exception e) {
+                  log.error("Hit unexpected error: {}", e.getMessage());
+                  return false;
+                }
+              });
+      if (!result) {
+        throw new RuntimeException(
+            String.format(
+                "Failed to execute isInitialBootstrapRequired rpc. Error details: %s",
+                String.join(",", lastErrors)));
+      }
+    } catch (Exception e) {
+      log.error("{} hit error : {}", getName(), e.getMessage());
+      Throwables.propagate(e);
+    }
+    return dbIdBootstrapRequiredMap.get(dbId);
   }
 
   @Override
@@ -47,453 +164,738 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     log.info("Running {}", getName());
 
     XClusterConfig xClusterConfig = getXClusterConfigFromTaskParams();
-    Universe sourceUniverse = Universe.getOrBadRequest(xClusterConfig.sourceUniverseUUID);
-    Universe targetUniverse = Universe.getOrBadRequest(xClusterConfig.targetUniverseUUID);
+    Universe sourceUniverse = Universe.getOrBadRequest(xClusterConfig.getSourceUniverseUUID());
+    Universe targetUniverse = Universe.getOrBadRequest(xClusterConfig.getTargetUniverseUUID());
     try {
       // Lock the source universe.
-      lockUniverseForUpdate(sourceUniverse.universeUUID, sourceUniverse.version);
+      lockAndFreezeUniverseForUpdate(
+          sourceUniverse.getUniverseUUID(), sourceUniverse.getVersion(), null /* Txn callback */);
       try {
         // Lock the target universe.
-        lockUniverseForUpdate(targetUniverse.universeUUID, targetUniverse.version);
+        lockAndFreezeUniverseForUpdate(
+            targetUniverse.getUniverseUUID(), targetUniverse.getVersion(), null /* Txn callback */);
 
-        createXClusterConfigSetStatusTask(XClusterConfigStatusType.Updating);
+        // Check equality of auto flags on both universes only if universe is used for DR.
+        createCheckXUniverseAutoFlag(sourceUniverse, targetUniverse, xClusterConfig.isUsedForDr())
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.PreflightChecks);
 
-        Set<String> tableIds = xClusterConfig.getTables();
-        Map<String, List<String>> mainTableIndexTablesMap =
-            getMainTableIndexTablesMap(sourceUniverse, tableIds);
-        addIndexTables(tableIds, mainTableIndexTablesMap);
+        createXClusterConfigSetStatusTask(xClusterConfig, XClusterConfigStatusType.Updating);
 
-        List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedTableInfoList =
-            getRequestedTableInfoList(tableIds, sourceUniverse, targetUniverse);
-        xClusterConfig.setTableType(requestedTableInfoList);
+        if (xClusterConfig.getType() != ConfigType.Db) {
+          createXClusterConfigSetStatusForTablesTask(
+              xClusterConfig,
+              getTableIds(taskParams().getTableInfoList()),
+              XClusterTableConfig.Status.Updating);
+        }
 
-        addSubtasksToCreateXClusterConfig(
-            sourceUniverse, targetUniverse, requestedTableInfoList, mainTableIndexTablesMap);
+        if (xClusterConfig.getType() == ConfigType.Db) {
+          addSubtasksToCreateXClusterConfig(
+              xClusterConfig, taskParams().getDbs(), taskParams().getPitrParams());
+        } else {
+          addSubtasksToCreateXClusterConfig(
+              xClusterConfig,
+              taskParams().getTableInfoList(),
+              taskParams().getMainTableIndexTablesMap(),
+              taskParams().getSourceTableIdsWithNoTableOnTargetUniverse(),
+              taskParams().getPitrParams());
+        }
 
-        createXClusterConfigSetStatusTask(XClusterConfigStatusType.Running)
+        // After all the other subtasks are done, set the DR states to show replication is
+        // happening.
+        if (xClusterConfig.isUsedForDr()) {
+          createSetDrStatesTask(
+                  xClusterConfig,
+                  State.Replicating,
+                  SourceUniverseState.ReplicatingData,
+                  TargetUniverseState.ReceivingData,
+                  null /* keyspacePending */)
+              .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        }
+
+        createXClusterConfigSetStatusTask(xClusterConfig, XClusterConfigStatusType.Running)
             .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
 
-        createMarkUniverseUpdateSuccessTasks(targetUniverse.universeUUID)
+        createMarkUniverseUpdateSuccessTasks(targetUniverse.getUniverseUUID())
             .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
 
-        createMarkUniverseUpdateSuccessTasks(sourceUniverse.universeUUID)
+        createMarkUniverseUpdateSuccessTasks(sourceUniverse.getUniverseUUID())
             .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
 
         getRunnableTask().runSubTasks();
+      } catch (Exception e) {
+        log.error("{} hit error : {}", getName(), e.getMessage());
+        // Set xCluster config status to failed.
+        xClusterConfig.updateStatus(XClusterConfigStatusType.Failed);
+        // Set tables in updating status to failed.
+        Set<String> tablesInPendingStatus =
+            xClusterConfig.getTableIdsInStatus(
+                getTableIds(taskParams().getTableInfoList()),
+                X_CLUSTER_TABLE_CONFIG_PENDING_STATUS_LIST);
+        xClusterConfig.updateStatusForTables(
+            tablesInPendingStatus, XClusterTableConfig.Status.Failed);
+
+        if (xClusterConfig.isUsedForDr()) {
+          // Prevent all other DR tasks except delete from running.
+          log.info(
+              "Setting the dr config state of xCluster config {} to {} from {}",
+              xClusterConfig.getUuid(),
+              State.Failed,
+              xClusterConfig.getDrConfig().getState());
+          xClusterConfig.getDrConfig().setState(State.Failed);
+          xClusterConfig.getDrConfig().update();
+        }
+
+        // Set backup and restore status to failed and alter load balanced.
+        boolean isLoadBalancerAltered = false;
+        for (Restore restore : restoreList) {
+          isLoadBalancerAltered = isLoadBalancerAltered || restore.isAlterLoadBalancer();
+        }
+        handleFailedBackupAndRestore(
+            backupList, restoreList, false /* isAbort */, isLoadBalancerAltered);
+        throw new RuntimeException(e);
       } finally {
         // Unlock the target universe.
-        unlockUniverseForUpdate(targetUniverse.universeUUID);
+        unlockUniverseForUpdate(targetUniverse.getUniverseUUID());
       }
-    } catch (Exception e) {
-      log.error("{} hit error : {}", getName(), e.getMessage());
-      setXClusterConfigStatus(XClusterConfigStatusType.Failed);
-      throw new RuntimeException(e);
     } finally {
       // Unlock the source universe.
-      unlockUniverseForUpdate(sourceUniverse.universeUUID);
+      unlockUniverseForUpdate(sourceUniverse.getUniverseUUID());
     }
 
     log.info("Completed {}", getName());
   }
 
   protected void addSubtasksToCreateXClusterConfig(
-      Universe sourceUniverse,
-      Universe targetUniverse,
-      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedTableInfoList,
-      Map<String, List<String>> mainTableIndexTablesMap) {
-    XClusterConfig xClusterConfig = getXClusterConfigFromTaskParams();
+      XClusterConfig xClusterConfig,
+      @Nullable List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedTableInfoList,
+      @Nullable Map<String, List<String>> mainTableIndexTablesMap,
+      @Nullable Set<String> sourceTableIdsWithNoTableOnTargetUniverse,
+      @Nullable Set<String> sourceDbIds,
+      @Nullable DrConfigCreateForm.PitrParams pitrParams,
+      boolean isForceBootstrap) {
+    Universe sourceUniverse = Universe.getOrBadRequest(xClusterConfig.getSourceUniverseUUID());
+    Universe targetUniverse = Universe.getOrBadRequest(xClusterConfig.getTargetUniverseUUID());
+
+    // Create namespaces for universe's clusters if both universes are k8s universes and MCS is
+    // enabled.
+    if (KubernetesUtil.isMCSEnabled(sourceUniverse)
+        && KubernetesUtil.isMCSEnabled(targetUniverse)) {
+      createReplicateNamespacesTask(xClusterConfig);
+    }
+
+    // Ensure network health between source and target universes.
+    if (confGetter.getConfForScope(
+        sourceUniverse, UniverseConfKeys.xClusterNetworkConnectivityCheckEnabled)) {
+      createXClusterNetworkConnectivityCheckTask(xClusterConfig);
+    }
 
     // Support mismatched TLS root certificates.
-    Optional<File> sourceCertificate =
-        getSourceCertificateIfNecessary(sourceUniverse, targetUniverse);
-    sourceCertificate.ifPresent(
-        cert ->
-            createTransferXClusterCertsCopyTasks(
-                targetUniverse.getNodes(),
-                xClusterConfig.getReplicationGroupName(),
-                cert,
-                targetUniverse.getUniverseDetails().getSourceRootCertDirPath()));
+    createTransferXClusterCertsCopyTasks(xClusterConfig);
 
     Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
-        requestedNamespaceNameTablesInfoMapNeedBootstrap =
-            getRequestedNamespaceNameTablesInfoMapNeedBootstrap(
-                requestedTableInfoList, mainTableIndexTablesMap);
+        dbToTablesInfoMapNeedBootstrap = null;
 
-    // Replication for tables that do NOT need bootstrapping.
-    Set<String> tableIdsNotNeedBootstrap =
-        getTableIdsNotNeedBootstrap(getTableIds(requestedTableInfoList));
-    if (!tableIdsNotNeedBootstrap.isEmpty()) {
-      log.info(
-          "Creating a subtask to set up replication without bootstrap for tables {}",
-          tableIdsNotNeedBootstrap);
+    if (xClusterConfig.getType() != ConfigType.Db) {
+      dbToTablesInfoMapNeedBootstrap =
+          getDbToTablesInfoMapNeedBootstrapAndUpdateTableNeedBootstrap(
+              xClusterConfig,
+              getTableIds(requestedTableInfoList),
+              requestedTableInfoList,
+              mainTableIndexTablesMap,
+              sourceTableIdsWithNoTableOnTargetUniverse,
+              isForceBootstrap);
+    }
 
-      // Set up the replication config.
-      createXClusterConfigSetupTask(tableIdsNotNeedBootstrap)
-          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+    // Add the subtasks to set up replication for tables that do not need bootstrapping.
+    Set<String> tableIdsNotNeedBootstrap = null;
+
+    if (xClusterConfig.getType() != ConfigType.Db) {
+      tableIdsNotNeedBootstrap = getTableIdsNotNeedBootstrap(getTableIds(requestedTableInfoList));
+    }
+    if (!CollectionUtils.isEmpty(tableIdsNotNeedBootstrap)
+        && xClusterConfig.getType() != ConfigType.Db) {
+      addSubtasksForTablesNotNeedBootstrap(
+          xClusterConfig,
+          tableIdsNotNeedBootstrap,
+          requestedTableInfoList,
+          sourceDbIds,
+          false /* isReplicationConfigCreated */,
+          pitrParams);
     }
 
     // Add the subtasks to set up replication for tables that need bootstrapping.
     addSubtasksForTablesNeedBootstrap(
-        sourceUniverse,
-        targetUniverse,
-        taskParams().createFormData.bootstrapParams,
-        requestedNamespaceNameTablesInfoMapNeedBootstrap,
-        !tableIdsNotNeedBootstrap.isEmpty());
+        xClusterConfig,
+        taskParams().getBootstrapParams(),
+        dbToTablesInfoMapNeedBootstrap,
+        sourceDbIds,
+        !CollectionUtils.isEmpty(tableIdsNotNeedBootstrap),
+        pitrParams);
+  }
+
+  protected void addSubtasksToCreateXClusterConfig(
+      XClusterConfig xClusterConfig,
+      Set<String> sourceDbIds,
+      @Nullable DrConfigCreateForm.PitrParams pitrParams,
+      boolean isForceBootstrap) {
+    addSubtasksToCreateXClusterConfig(
+        xClusterConfig, null, null, null, sourceDbIds, pitrParams, isForceBootstrap);
+  }
+
+  protected void addSubtasksToCreateXClusterConfig(
+      XClusterConfig xClusterConfig,
+      Set<String> sourceDbIds,
+      @Nullable DrConfigCreateForm.PitrParams pitrParams) {
+    addSubtasksToCreateXClusterConfig(
+        xClusterConfig, null, null, null, sourceDbIds, pitrParams, false /* isForceBootstrap */);
+  }
+
+  protected void addSubtasksToCreateXClusterConfig(
+      XClusterConfig xClusterConfig,
+      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedTableInfoList,
+      Map<String, List<String>> mainTableIndexTablesMap,
+      Set<String> sourceTableIdsWithNoTableOnTargetUniverse,
+      @Nullable DrConfigCreateForm.PitrParams pitrParams) {
+    addSubtasksToCreateXClusterConfig(
+        xClusterConfig,
+        requestedTableInfoList,
+        mainTableIndexTablesMap,
+        sourceTableIdsWithNoTableOnTargetUniverse,
+        null,
+        pitrParams,
+        false /*isforcebootstrap */);
+  }
+
+  protected void addSubtasksForTablesNotNeedBootstrap(
+      XClusterConfig xClusterConfig,
+      Set<String> tableIdsNotNeedBootstrap,
+      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedTableInfoList,
+      Set<String> sourceDbIds,
+      boolean isReplicationConfigCreated,
+      @Nullable DrConfigCreateForm.PitrParams pitrParams) {
+    log.info(
+        "Creating a subtask to set up replication without bootstrap for tables {}",
+        tableIdsNotNeedBootstrap);
+
+    Universe sourceUniverse = Universe.getOrBadRequest(xClusterConfig.getSourceUniverseUUID());
+    Universe targetUniverse = Universe.getOrBadRequest(xClusterConfig.getTargetUniverseUUID());
+    CommonTypes.TableType tableType =
+        xClusterConfig.getType() == ConfigType.Db
+            ? CommonTypes.TableType.PGSQL_TABLE_TYPE
+            : requestedTableInfoList.get(0).getTableType();
+
+    if (xClusterConfig.getTablesById(tableIdsNotNeedBootstrap).stream()
+        .anyMatch(tableConfig -> Objects.isNull(tableConfig.getStreamId()))) {
+      // Create checkpoints for the tables.
+      createBootstrapProducerTask(xClusterConfig, tableIdsNotNeedBootstrap)
+          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.BootstrappingProducer);
+    }
+
+    if (xClusterConfig.isUsedForDr()) {
+      createSetDrStatesTask(
+              xClusterConfig,
+              null /* drConfigState */,
+              SourceUniverseState.ReadyToReplicate,
+              null /* targetUniverseState */,
+              null /* keyspacePending */)
+          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+    }
+
+    // Set up PITRs for txn/db scoped xCluster.
+    if (xClusterConfig.getType() != ConfigType.Basic) {
+      Set<MasterTypes.NamespaceIdentifierPB> namespaces;
+      if (xClusterConfig.getType() == ConfigType.Db) {
+        namespaces = getNamespaces(this.ybService, sourceUniverse, sourceDbIds);
+        if (namespaces.size() != sourceDbIds.size()) {
+          throw new RuntimeException(
+              String.format(
+                  "Some db ids passed in are missing from source universe: %s, expected namespaces:"
+                      + " %s, got: %s",
+                  sourceUniverse.getUniverseUUID(), sourceDbIds, namespaces));
+        }
+      } else {
+        List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>
+            requestedTableInfoListNotNeedBootstrap =
+                requestedTableInfoList.stream()
+                    .filter(tableInfo -> tableIdsNotNeedBootstrap.contains(getTableId(tableInfo)))
+                    .collect(Collectors.toList());
+        namespaces = getNamespaces(requestedTableInfoListNotNeedBootstrap);
+      }
+      namespaces.forEach(
+          namespace -> {
+            createPitrConfigIfRequired(
+                xClusterConfig, targetUniverse, tableType, namespace.getName(), pitrParams);
+            createPitrConfigIfRequired(
+                xClusterConfig, sourceUniverse, tableType, namespace.getName(), pitrParams);
+          });
+    }
+
+    if (isReplicationConfigCreated) {
+      // If the xCluster config is already created, add the bootstrapped tables to the created
+      // xCluster config.
+      createXClusterConfigModifyTablesTask(
+              xClusterConfig,
+              tableIdsNotNeedBootstrap,
+              XClusterConfigModifyTables.Params.Action.ADD)
+          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+    } else {
+      // Set up the replication config.
+      createXClusterConfigSetupTask(xClusterConfig, tableIdsNotNeedBootstrap)
+          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+    }
   }
 
   protected void addSubtasksForTablesNeedBootstrap(
-      Universe sourceUniverse,
-      Universe targetUniverse,
-      XClusterConfigCreateFormData.BootstrapParams bootstrapParams,
-      Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
-          requestedNamespaceNameTablesInfoMapNeedBootstrap,
-      boolean isReplicationConfigCreated) {
-    XClusterConfig xClusterConfig = getXClusterConfigFromTaskParams();
+      XClusterConfig xClusterConfig,
+      @Nullable XClusterConfigCreateFormData.BootstrapParams bootstrapParams,
+      @Nullable
+          Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
+              dbToTablesInfoMapNeedBootstrap,
+      Set<String> sourceDbIds,
+      boolean isReplicationConfigCreated,
+      @Nullable DrConfigCreateForm.PitrParams pitrParams) {
+    Universe sourceUniverse = Universe.getOrBadRequest(xClusterConfig.getSourceUniverseUUID());
+    Universe targetUniverse = Universe.getOrBadRequest(xClusterConfig.getTargetUniverseUUID());
 
-    for (String namespaceName : requestedNamespaceNameTablesInfoMapNeedBootstrap.keySet()) {
-      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap =
-          requestedNamespaceNameTablesInfoMapNeedBootstrap.get(namespaceName);
-      if (tablesInfoListNeedBootstrap.isEmpty()) {
-        throw new RuntimeException(
-            String.format(
-                "tablesInfoListNeedBootstrap in namespaceName %s is empty", namespaceName));
+    Map<String, String> dbNameToDbIdMap = new HashMap<>();
+    if (xClusterConfig.getType() == ConfigType.Db) {
+      Set<MasterTypes.NamespaceIdentifierPB> namespaces =
+          getNamespaces(this.ybService, sourceUniverse, sourceDbIds);
+      for (MasterTypes.NamespaceIdentifierPB namespace : namespaces) {
+        dbNameToDbIdMap.put(namespace.getName(), namespace.getId().toStringUtf8());
       }
-      CommonTypes.TableType tableType = tablesInfoListNeedBootstrap.get(0).getTableType();
-      Set<String> tableIdsNeedBootstrap = getTableIds(tablesInfoListNeedBootstrap);
-      log.info(
-          "Creating subtasks to set up replication using bootstrap for tables {} in "
-              + "keyspace {}",
-          tableIdsNeedBootstrap,
-          namespaceName);
+    }
 
-      // Create checkpoints for the tables.
-      createBootstrapProducerTask(tableIdsNeedBootstrap)
-          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.BootstrappingProducer);
+    for (String namespaceName :
+        dbToTablesInfoMapNeedBootstrap != null
+            ? dbToTablesInfoMapNeedBootstrap.keySet()
+            : dbNameToDbIdMap.keySet()) {
+      String namespaceId = dbNameToDbIdMap.get(namespaceName);
+      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap = null;
+
+      if (xClusterConfig.getType() == ConfigType.Db) {
+        Optional<XClusterNamespaceConfig> namespaceConfigOptional =
+            xClusterConfig.maybeGetNamespaceById(namespaceId);
+        if (namespaceConfigOptional.isPresent()
+            && namespaceConfigOptional.get().getStatus() == Status.Running) {
+          log.info(
+              "Namespace {} already is in replication {}, skipping",
+              namespaceName,
+              xClusterConfig.getUuid());
+          continue;
+        }
+      }
+
+      // For db scoped replication, we will skip backup/restore subtasks at runtime if bootstrapping
+      //   is not required. For non-db scoped replication, we always perform backup restore here.
+      Predicate<ITask> bootstrapRequiredPredicate =
+          task -> {
+            // No bootstrap should be done for switchover.
+            if (xClusterConfig.isUsedForDr()
+                && xClusterConfig.getDrConfig().getState().equals(State.SwitchoverInProgress)) {
+              return false;
+            }
+
+            if (xClusterConfig.getType() == ConfigType.Db) {
+              return checkBootstrapRequired(namespaceId, ybService, sourceUniverse, xClusterConfig);
+            }
+            return true;
+          };
+
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        tablesInfoListNeedBootstrap = dbToTablesInfoMapNeedBootstrap.get(namespaceName);
+        if (tablesInfoListNeedBootstrap.isEmpty()) {
+          throw new RuntimeException(
+              String.format(
+                  "tablesInfoListNeedBootstrap in namespaceName %s is empty", namespaceName));
+        }
+      }
+      CommonTypes.TableType tableType =
+          xClusterConfig.getType() == ConfigType.Db
+              ? CommonTypes.TableType.PGSQL_TABLE_TYPE
+              : tablesInfoListNeedBootstrap.get(0).getTableType();
+      Set<String> tableIdsNeedBootstrap = null;
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        tableIdsNeedBootstrap = getTableIds(tablesInfoListNeedBootstrap);
+        log.info(
+            "Creating subtasks to set up replication using bootstrap for tables {} in "
+                + "keyspace {}",
+            tableIdsNeedBootstrap,
+            namespaceName);
+      }
+
+      if (xClusterConfig.getType() == ConfigType.Db) {
+        if (!xClusterConfig.getDbIds().contains(namespaceId)) {
+          xClusterConfig.addNamespaces(Set.of(namespaceId));
+          xClusterConfig.updateStatusForNamespace(
+              namespaceId, XClusterNamespaceConfig.Status.Updating);
+        }
+
+        if (!isReplicationConfigCreated) {
+          createCreateOutboundReplicationGroupTask(
+              xClusterConfig, Collections.singleton(namespaceId));
+        } else {
+          createXClusterAddNamespaceToOutboundReplicationGroupTask(xClusterConfig, namespaceId);
+        }
+      } else {
+        // Create checkpoints for the tables.
+        createBootstrapProducerTask(xClusterConfig, tableIdsNeedBootstrap)
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.BootstrappingProducer);
+      }
+
+      // Create the following subtask only when the subtasks to set up replication for the first
+      // namespace are being created.
+      if (xClusterConfig.isUsedForDr()) {
+        createSetDrStatesTask(
+                xClusterConfig,
+                null /* drConfigState */,
+                SourceUniverseState.ReadyToReplicate,
+                null /* targetUniverseState */,
+                namespaceName)
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+      }
 
       // Backup from the source universe.
+      boolean useYbc =
+          sourceUniverse.isYbcEnabled()
+              && targetUniverse.isYbcEnabled()
+              && confGetter.getGlobalConf(GlobalConfKeys.enableYbcForXCluster);
+
+      BootstrapBackupParams backupParams = null;
+      if (bootstrapParams == null) {
+        if (xClusterConfig.isUsedForDr()) {
+          backupParams = new BootstrapBackupParams();
+          backupParams.storageConfigUUID = xClusterConfig.getDrConfig().getStorageConfigUuid();
+          backupParams.parallelism = xClusterConfig.getDrConfig().getParallelism();
+        }
+      } else {
+        backupParams = bootstrapParams.backupRequestParams;
+      }
+
       BackupRequestParams backupRequestParams =
-          getBackupRequestParams(sourceUniverse, bootstrapParams, tablesInfoListNeedBootstrap);
+          getBackupRequestParams(
+              sourceUniverse, backupParams, tablesInfoListNeedBootstrap, namespaceName, tableType);
       Backup backup =
           createAllBackupSubtasks(
-              backupRequestParams, UserTaskDetails.SubTaskGroupType.CreatingBackup);
+              backupRequestParams,
+              UserTaskDetails.SubTaskGroupType.CreatingBackup,
+              useYbc,
+              null,
+              bootstrapRequiredPredicate,
+              true /* forXCluster */);
+      backupList.add(backup);
 
-      // Assign the created backup UUID for the tables in the DB.
-      xClusterConfig.setBackupForTables(tableIdsNeedBootstrap, backup);
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        // Assign the created backup UUID for the tables in the DB.
+        xClusterConfig.updateBackupForTables(tableIdsNeedBootstrap, backup);
+      }
 
-      // If the table type is YCQL, delete the tables from the target universe, because if the
-      // tables exist, the restore subtask will fail.
+      // Before dropping the tables on the target universe, delete the associated PITR configs.
+      Optional<PitrConfig> pitrConfigOnTargetOptional =
+          PitrConfig.maybeGet(
+              xClusterConfig.getTargetUniverseUUID(),
+              tableType,
+              namespaceName); // Need to drop pitr configs that may be dangling.
+      long retentionPeriodSeconds;
+      long snapshotIntervalSeconds;
+      // Need to keep track of re-created PITR after deleting old PITR if backup restore is needed.
+      boolean oldPitrCreatedForDr = false;
+      if (xClusterConfig.isUsedForDr() && Objects.nonNull(pitrParams)) {
+        retentionPeriodSeconds = pitrParams.retentionPeriodSec;
+        snapshotIntervalSeconds = pitrParams.snapshotIntervalSec;
+      } else {
+        retentionPeriodSeconds =
+            confGetter
+                .getConfForScope(
+                    targetUniverse, UniverseConfKeys.txnXClusterPitrDefaultRetentionPeriod)
+                .getSeconds();
+        snapshotIntervalSeconds =
+            confGetter
+                .getConfForScope(
+                    targetUniverse, UniverseConfKeys.txnXClusterPitrDefaultSnapshotInterval)
+                .getSeconds();
+      }
+      if (xClusterConfig.getType() != ConfigType.Basic) {
+        if (pitrConfigOnTargetOptional.isPresent()) {
+          PitrConfig pitrConfig = pitrConfigOnTargetOptional.get();
+          oldPitrCreatedForDr = pitrConfig.isCreatedForDr();
+          // if new PITR will not be created, need to add pitr config to existing xcluster config.
+          // If PITR is dropped, this will dropped from cascade.
+          if (pitrConfig.getRetentionPeriod() == retentionPeriodSeconds
+              && pitrConfig.getScheduleInterval() == snapshotIntervalSeconds) {
+            createAddExistingPitrToXClusterConfig(xClusterConfig, pitrConfig);
+          }
+
+          // Delete the PITR config if the the bootstrap required predicate is true (db cannot
+          // be dropped if there is a PITR config associated to it) or the PITR config has
+          // different parameters.
+          createDeletePitrConfigTask(
+                  pitrConfig.getUuid(), targetUniverse.getUniverseUUID(), false /* ignoreErrors */)
+              .setShouldRunPredicate(
+                  bootstrapRequiredPredicate.or(
+                      task ->
+                          pitrConfig.getRetentionPeriod() != retentionPeriodSeconds
+                              || pitrConfig.getScheduleInterval() != snapshotIntervalSeconds));
+        }
+      }
+
       if (tableType == CommonTypes.TableType.YQL_TABLE_TYPE) {
+        // If the table type is YCQL, delete the tables from the target universe, because if the
+        // tables exist, the restore subtask will fail.
         List<String> tableNamesNeedBootstrap =
-            tablesInfoListNeedBootstrap
-                .stream()
+            tablesInfoListNeedBootstrap.stream()
+                // Filter out index tables as they will be dropped once their main tables are
+                // dropped.
                 .filter(
                     tableInfo ->
                         tableInfo.getRelationType()
                             != MasterTypes.RelationType.INDEX_TABLE_RELATION)
                 .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
-                .collect(Collectors.toList());
+                .toList();
         List<String> tableNamesToDeleteOnTargetUniverse =
-            getTableInfoList(targetUniverse)
-                .stream()
+            getTableInfoList(targetUniverse).stream()
                 .filter(
                     tableInfo ->
-                        tableNamesNeedBootstrap.contains(tableInfo.getName())
+                        tableType == tableInfo.getTableType()
+                            && tableNamesNeedBootstrap.contains(tableInfo.getName())
                             && tableInfo.getNamespace().getName().equals(namespaceName))
                 .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
-                .collect(Collectors.toList());
+                .toList();
         createDeleteTablesFromUniverseTask(
-                targetUniverse.universeUUID,
+                targetUniverse.getUniverseUUID(),
                 Collections.singletonMap(namespaceName, tableNamesToDeleteOnTargetUniverse))
             .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.RestoringBackup);
+      } else if (tableType == CommonTypes.TableType.PGSQL_TABLE_TYPE) {
+        // Delete hanging replication streams, otherwise deleting the database will fail.
+        createDeleteRemnantStreamsTask(xClusterConfig, namespaceName)
+            .setShouldRunPredicate(bootstrapRequiredPredicate);
+        // If the table type is YSQL, delete the database from the target universe before restore.
+        createDeleteKeySpaceTask(
+                namespaceName, CommonTypes.TableType.PGSQL_TABLE_TYPE, true /*ysqlForce*/)
+            .setShouldRunPredicate(bootstrapRequiredPredicate);
+      }
+
+      // Wait for sometime to make sure the above drop database has reached all the nodes.
+      Duration waitTime =
+          this.confGetter.getConfForScope(
+              targetUniverse, UniverseConfKeys.sleepTimeBeforeRestoreXClusterSetup);
+      if (waitTime.compareTo(Duration.ZERO) > 0) {
+        createWaitForDurationSubtask(targetUniverse, waitTime)
+            .setShouldRunPredicate(bootstrapRequiredPredicate)
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.RestoringBackup);
+      }
+
+      if (xClusterConfig.isUsedForDr()) {
+        createSetDrStatesTask(
+                xClusterConfig,
+                null /* drConfigState */,
+                SourceUniverseState.WaitingForDr,
+                TargetUniverseState.Bootstrapping,
+                namespaceName)
+            .setShouldRunPredicate(bootstrapRequiredPredicate)
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
       }
 
       // Restore to the target universe.
       RestoreBackupParams restoreBackupParams =
-          getRestoreBackupParams(targetUniverse, backupRequestParams, backup);
-      createAllRestoreSubtasks(
-          restoreBackupParams,
-          UserTaskDetails.SubTaskGroupType.RestoringBackup,
-          backup.category.equals(BackupCategory.YB_CONTROLLER));
-      // Set the restore time for the tables in the DB.
-      createSetRestoreTimeTask(tableIdsNeedBootstrap)
-          .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.RestoringBackup);
+          getRestoreBackupParams(sourceUniverse, targetUniverse, backupRequestParams, backup);
+      // For db scoped replication, we will skip restore if bootstrapping was not required.
+      Restore restore =
+          createAllRestoreSubtasks(
+              restoreBackupParams,
+              UserTaskDetails.SubTaskGroupType.RestoringBackup,
+              bootstrapRequiredPredicate,
+              true /* forXCluster */);
+      restoreList.add(restore);
+
+      if (xClusterConfig.getType() != ConfigType.Db) {
+        // Assign the created restore UUID for the tables in the DB.
+        xClusterConfig.updateRestoreForTables(tableIdsNeedBootstrap, restore);
+
+        // Set the restore time for the tables in the DB and update restore object to completed
+        // state.
+        createSetRestoreTimeTask(xClusterConfig, tableIdsNeedBootstrap)
+            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.RestoringBackup);
+      } else {
+        createSetRestoreStateTask(restore, Restore.State.Completed)
+            .setShouldRunPredicate(bootstrapRequiredPredicate);
+      }
+
+      // Recreate the PITR config for txn xCluster.
+      if (xClusterConfig.getType() != ConfigType.Basic) {
+        if (pitrConfigOnTargetOptional.isPresent()) {
+          PitrConfig pitrConfig = pitrConfigOnTargetOptional.get();
+          // Create the PITR config on the target if the predicate is true which means the
+          // previously existed PITR is deleted.
+          createCreatePitrConfigTask(
+                  targetUniverse,
+                  namespaceName,
+                  tableType,
+                  retentionPeriodSeconds,
+                  snapshotIntervalSeconds,
+                  xClusterConfig,
+                  oldPitrCreatedForDr /* createdForDr */)
+              .setShouldRunPredicate(
+                  bootstrapRequiredPredicate.or(
+                      task ->
+                          pitrConfig.getRetentionPeriod() != retentionPeriodSeconds
+                              || pitrConfig.getScheduleInterval() != snapshotIntervalSeconds));
+        } else {
+          createCreatePitrConfigTask(
+              targetUniverse,
+              namespaceName,
+              tableType,
+              retentionPeriodSeconds,
+              snapshotIntervalSeconds,
+              xClusterConfig,
+              true /* createdForDr */);
+        }
+        createPitrConfigIfRequired(
+            xClusterConfig, sourceUniverse, tableType, namespaceName, pitrParams);
+      }
+
+      if (xClusterConfig.getType() == ConfigType.Db) {
+        // Delete backup restore objects here if bootstrappig was not required as backup and
+        //  restore objects were generated during subtask creation.
+        createDeleteXClusterBackupRestoreEntriesTask(backup, restore)
+            .setShouldRunPredicate(bootstrapRequiredPredicate.negate());
+      }
 
       if (isReplicationConfigCreated) {
-        // If the xCluster config is already created, add the bootstrapped tables to the created
-        // xCluster config.
-        createXClusterConfigModifyTablesTask(tableIdsNeedBootstrap, null /* tableIdsToRemove */)
-            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        if (xClusterConfig.getType() == ConfigType.Db) {
+          createAddNamespaceToXClusterReplicationTask(xClusterConfig, namespaceId);
+        } else {
+          // If the xCluster config is already created, add the bootstrapped tables to the created
+          // xCluster config.
+          createXClusterConfigModifyTablesTask(
+                  xClusterConfig,
+                  tableIdsNeedBootstrap,
+                  XClusterConfigModifyTables.Params.Action.ADD)
+              .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        }
       } else {
         // Set up the replication config.
-        createXClusterConfigSetupTask(tableIdsNeedBootstrap)
-            .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        if (xClusterConfig.getType() == ConfigType.Db) {
+          createXClusterDbReplicationSetupTask(xClusterConfig)
+              .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        } else {
+          createXClusterConfigSetupTask(xClusterConfig, tableIdsNeedBootstrap)
+              .setSubTaskGroupType(UserTaskDetails.SubTaskGroupType.ConfigureUniverse);
+        }
         isReplicationConfigCreated = true;
+      }
+
+      if (xClusterConfig.getType() == ConfigType.Db) {
+        createXClusterConfigSetStatusForNamespacesTask(
+            xClusterConfig,
+            Collections.singleton(namespaceId),
+            XClusterNamespaceConfig.Status.Running);
       }
     }
   }
 
   protected Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
-      getRequestedNamespaceNameTablesInfoMapNeedBootstrap(
+      getDbToTablesInfoMapNeedBootstrapAndUpdateTableNeedBootstrap(
+          XClusterConfig xClusterConfig,
+          Set<String> tableIds,
           List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedTableInfoList,
-          Map<String, List<String>> mainTableIndexTablesMap) {
+          Map<String, List<String>> mainTableIndexTablesMap,
+          Set<String> sourceTableIdsWithNoTableOnTargetUniverse,
+          boolean isForceBootstrap) {
     if (requestedTableInfoList.isEmpty()) {
       log.warn("requestedTablesInfoList is empty");
       return Collections.emptyMap();
     }
-    // At least one entry exists in requestedNamespaceNameTablesInfoMap and each list in any entry
-    // has at least one TableInfo object.
+    // At least one entry exists in requestedTableInfoList.
     CommonTypes.TableType tableType = requestedTableInfoList.get(0).getTableType();
-    XClusterConfig xClusterConfig = getXClusterConfigFromTaskParams();
-    Set<String> requestedTableIds = getTableIds(requestedTableInfoList);
 
-    checkBootstrapRequiredForReplicationSetup(getTableIdsNeedBootstrap(requestedTableIds));
+    checkBootstrapRequiredForReplicationSetup(getTableIdsNeedBootstrap(tableIds), isForceBootstrap);
 
-    Set<String> tableIdsNeedBootstrap = getTableIdsNeedBootstrap(requestedTableIds);
-    groupByNamespaceName(requestedTableInfoList)
-        .forEach(
-            (namespaceName, tablesInfoList) -> {
-              Set<String> tableIdsInNamespace = getTableIds(tablesInfoList);
-              // If at least one YSQL table needs bootstrap, it must be done for all tables in that
-              // keyspace.
-              if (tableType == CommonTypes.TableType.PGSQL_TABLE_TYPE
-                  && !getTablesNeedBootstrap(tableIdsInNamespace).isEmpty()) {
-                xClusterConfig.setNeedBootstrapForTables(
-                    tableIdsInNamespace, true /* needBootstrap */);
-              }
-              // If a main table or an index table of a main table needs bootstrapping, it must be
-              // done
-              // for the main table and all of its index tables due to backup/restore restrictions.
-              mainTableIndexTablesMap.forEach(
-                  (mainTableId, indexTableIds) -> {
-                    if (tableIdsNeedBootstrap.contains(mainTableId)
-                        || indexTableIds.stream().anyMatch(tableIdsNeedBootstrap::contains)) {
-                      xClusterConfig.setNeedBootstrapForTables(
-                          Collections.singleton(mainTableId), true /* needBootstrap */);
-                      xClusterConfig.setNeedBootstrapForTables(
-                          indexTableIds, true /* needBootstrap */);
-                    }
-                  });
-            });
+    // If a table does not exist on the target universe, bootstrapping will be required for it.
+    xClusterConfig.updateNeedBootstrapForTables(
+        sourceTableIdsWithNoTableOnTargetUniverse, true /* needBootstrap */);
 
-    // Get tables requiring bootstrap again in case previous statement has made any changes.
-    Set<String> tableIdsNeedBootstrapAfterChanges = getTableIdsNeedBootstrap(requestedTableIds);
-
-    return groupByNamespaceName(
-        requestedTableInfoList
-            .stream()
-            .filter(
-                tableInfo ->
-                    tableIdsNeedBootstrapAfterChanges.contains(tableInfo.getId().toStringUtf8()))
-            .collect(Collectors.toList()));
-  }
-
-  /**
-   * It returns the list of table info from a universe for a set of table ids. Moreover, it ensures
-   * that all requested tables exist on the source and target universes, and they have the same
-   * type. Also, if the table type is YSQL and bootstrap is required, it ensures all the tables in a
-   * keyspace are selected because per-table backup/restore is not supported for YSQL.
-   *
-   * @param requestedTableIds The table ids to get the {@code TableInfo} for
-   * @param sourceUniverse The universe to gather the {@code TableInfo}s from
-   * @param targetUniverse The universe to check that matching tables exist on
-   * @return A list of {@link MasterDdlOuterClass.ListTablesResponsePB.TableInfo} containing table
-   *     info of the tables whose id is specified at {@code requestedTableIds}
-   */
-  protected List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> getRequestedTableInfoList(
-      Set<String> requestedTableIds, Universe sourceUniverse, Universe targetUniverse) {
-    // Ensure at least one table exists to verify.
-    if (requestedTableIds.isEmpty()) {
-      throw new IllegalArgumentException("requestedTableIds cannot be empty");
-    }
-    List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> sourceTableInfoList =
-        getTableInfoList(sourceUniverse);
-    List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedTableInfoList =
-        sourceTableInfoList
-            .stream()
-            .filter(tableInfo -> requestedTableIds.contains(tableInfo.getId().toStringUtf8()))
-            .collect(Collectors.toList());
-
-    // All tables are found on the source universe.
-    if (requestedTableInfoList.size() != requestedTableIds.size()) {
-      Set<String> foundTableIds = getTableIds(requestedTableInfoList);
-      Set<String> missingTableIds =
-          requestedTableIds
-              .stream()
-              .filter(tableId -> !foundTableIds.contains(tableId))
-              .collect(Collectors.toSet());
-      throw new IllegalArgumentException(
-          String.format(
-              "Some of the tables were not found on the source universe (Please note that "
-                  + "it might be an index table): was %d, found %d, missing tables: %s",
-              requestedTableIds.size(), requestedTableInfoList.size(), missingTableIds));
-    }
-
-    CommonTypes.TableType tableType = requestedTableInfoList.get(0).getTableType();
-    // All tables have the same type.
-    if (!requestedTableInfoList
-        .stream()
-        .allMatch(tableInfo -> tableInfo.getTableType().equals(tableType))) {
-      throw new IllegalArgumentException(
-          "At least one table has a different type from others. "
-              + "All tables in an xCluster config must have the same type. Please create separate "
-              + "xCluster configs for different table types.");
-    }
-
-    // XCluster replication can be set up only for YCQL and YSQL tables.
-    if (!tableType.equals(CommonTypes.TableType.YQL_TABLE_TYPE)
-        && !tableType.equals(CommonTypes.TableType.PGSQL_TABLE_TYPE)) {
-      throw new IllegalArgumentException(
-          String.format(
-              "XCluster replication can be set up only for YCQL and YSQL tables: "
-                  + "type %s requested",
-              tableType));
-    }
-    log.info("All the requested tables are found and they have a type of {}", tableType);
-
-    List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> targetTablesInfoList =
-        getTableInfoList(targetUniverse);
-    checkTablesExistOnTargetUniverse(requestedTableInfoList, targetTablesInfoList);
-
-    // If table type is YSQL and bootstrap is requested, all tables in that keyspace are selected.
-    if (tableType == CommonTypes.TableType.PGSQL_TABLE_TYPE) {
-      groupByNamespaceId(requestedTableInfoList)
-          .forEach(
-              (namespaceId, tablesInfoList) -> {
-                Set<String> selectedTableIdsInNamespace = getTableIds(tablesInfoList);
-                Set<String> tableIdsNeedBootstrap =
-                    getTableIdsNeedBootstrap(selectedTableIdsInNamespace);
-                if (!tableIdsNeedBootstrap.isEmpty()) {
-                  Set<String> tableIdsInNamespace =
-                      sourceTableInfoList
-                          .stream()
-                          .filter(
-                              tableInfo ->
-                                  tableInfo
-                                      .getNamespace()
-                                      .getId()
-                                      .toStringUtf8()
-                                      .equals(namespaceId))
-                          .map(tableInfo -> tableInfo.getId().toStringUtf8())
-                          .collect(Collectors.toSet());
-                  if (tableIdsInNamespace.size() != selectedTableIdsInNamespace.size()) {
-                    throw new IllegalArgumentException(
-                        String.format(
-                            "For YSQL tables, all the tables in a keyspace must be selected: "
-                                + "selected: %s, tables in the keyspace: %s",
-                            selectedTableIdsInNamespace, tableIdsInNamespace));
-                  }
+    Set<String> tableIdsNeedBootstrap = getTableIdsNeedBootstrap(tableIds);
+    Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>> dbToTableInfoListMap =
+        groupByNamespaceName(requestedTableInfoList);
+    dbToTableInfoListMap.forEach(
+        (namespaceName, tablesInfoList) -> {
+          Set<String> tableIdsInNamespace = getTableIds(tablesInfoList);
+          // If at least one YSQL table needs bootstrap, it must be done for all tables in that
+          // keyspace.
+          if (tableType == CommonTypes.TableType.PGSQL_TABLE_TYPE
+              && !getTablesNeedBootstrap(tableIdsInNamespace).isEmpty()) {
+            xClusterConfig.updateNeedBootstrapForTables(
+                tableIdsInNamespace, true /* needBootstrap */);
+          }
+          // If a main table or an index table of a main table needs bootstrapping, it must be
+          // done for the main table and all of its index tables due to backup/restore
+          // restrictions.
+          mainTableIndexTablesMap.forEach(
+              (mainTableId, indexTableIds) -> {
+                if (tableIdsNeedBootstrap.contains(mainTableId)
+                    || indexTableIds.stream().anyMatch(tableIdsNeedBootstrap::contains)) {
+                  xClusterConfig.updateNeedBootstrapForTables(
+                      Collections.singleton(mainTableId), true /* needBootstrap */);
+                  xClusterConfig.updateNeedBootstrapForTables(
+                      indexTableIds, true /* needBootstrap */);
                 }
               });
-    }
-
-    return requestedTableInfoList;
-  }
-
-  protected Set<String> addIndexTables(
-      Set<String> tableIds, Map<String, List<String>> mainTableIndexTablesMap) {
-    XClusterConfig xClusterConfig = getXClusterConfigFromTaskParams();
-    Set<String> indexTableIdSet =
-        mainTableIndexTablesMap.values().stream().flatMap(List::stream).collect(Collectors.toSet());
-    if ((taskParams().createFormData != null && taskParams().createFormData.bootstrapParams == null)
-        || (taskParams().editFormData != null
-            && taskParams().editFormData.bootstrapParams == null)) {
-      xClusterConfig.addTablesIfNotExist(indexTableIdSet);
-    } else {
-      xClusterConfig.addTablesIfNotExist(indexTableIdSet, indexTableIdSet);
-    }
-    xClusterConfig.setIndexTableForTables(indexTableIdSet, true /* indexTable */);
-    tableIds.addAll(indexTableIdSet);
-    return tableIds;
-  }
-
-  protected void checkTablesExistOnTargetUniverse(
-      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> requestedSourceTablesInfoList,
-      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> targetTablesInfoList) {
-    if (requestedSourceTablesInfoList.isEmpty()) {
-      log.warn("requestedSourceTablesInfoList is empty");
-      return;
-    }
-    Set<String> notFoundNamespaces = new HashSet<>();
-    Set<String> notFoundTables = new HashSet<>();
-    CommonTypes.TableType tableType = requestedSourceTablesInfoList.get(0).getTableType();
-    // Namespace name for one table type is unique.
-    Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
-        targetNamespaceTablesInfoMap =
-            targetTablesInfoList
-                .stream()
-                .filter(tableInfo -> tableInfo.getTableType().equals(tableType))
-                .collect(Collectors.groupingBy(tableInfo -> tableInfo.getNamespace().getName()));
-    requestedSourceTablesInfoList.forEach(
-        sourceTableInfo -> {
-          // Find tables with the same keyspace name.
-          List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> targetTableInfoListInNamespace =
-              targetNamespaceTablesInfoMap.get(sourceTableInfo.getNamespace().getName());
-          if (targetTableInfoListInNamespace != null) {
-            if (tableType == CommonTypes.TableType.PGSQL_TABLE_TYPE) {
-              // Check schema name match in case of YSQL.
-              List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> targetTableInfoListInSchema =
-                  targetTableInfoListInNamespace
-                      .stream()
-                      .filter(
-                          tableInfo ->
-                              tableInfo.getPgschemaName().equals(sourceTableInfo.getPgschemaName()))
-                      .collect(Collectors.toList());
-              // Check the table with the same name exists on the target universe.
-              if (targetTableInfoListInSchema
-                  .stream()
-                  .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
-                  .noneMatch(tableName -> sourceTableInfo.getName().equals(tableName))) {
-                notFoundTables.add(sourceTableInfo.getName());
-              }
-            } else {
-              // Check the table with the same name exists on the target universe.
-              if (targetTableInfoListInNamespace
-                  .stream()
-                  .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
-                  .noneMatch(tableName -> sourceTableInfo.getName().equals(tableName))) {
-                notFoundTables.add(sourceTableInfo.getName());
-              }
-            }
-          } else {
-            notFoundNamespaces.add(sourceTableInfo.getNamespace().getName());
-          }
         });
-    if (!notFoundNamespaces.isEmpty() || !notFoundTables.isEmpty()) {
-      throw new IllegalStateException(
-          String.format(
-              "Not found namespaces on the target universe: %s, not found tables on the "
-                  + "target universe: %s",
-              notFoundNamespaces, notFoundTables));
-    }
+
+    // Get tables requiring bootstrap again in case previous statement has made any changes.
+    Set<String> tableIdsNeedBootstrapAfterChanges =
+        getTableIdsNeedBootstrap(getTableIds(requestedTableInfoList));
+
+    Map<String, List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo>>
+        dbToTablesInfoMapNeedBootstrap =
+            requestedTableInfoList.stream()
+                .filter(
+                    tableInfo ->
+                        tableIdsNeedBootstrapAfterChanges.contains(
+                            tableInfo.getId().toStringUtf8()))
+                .collect(Collectors.groupingBy(tableInfo -> tableInfo.getNamespace().getName()));
+
+    log.debug(
+        "Following tables need bootstrap dbToTablesInfoMapNeedBootstrap is {}",
+        dbToTablesInfoMapNeedBootstrap);
+    return dbToTablesInfoMapNeedBootstrap;
   }
 
-  static BackupRequestParams getBackupRequestParams(
+  private static BackupRequestParams getBackupRequestParams(
       Universe sourceUniverse,
-      XClusterConfigCreateFormData.BootstrapParams bootstrapParams,
-      List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap) {
+      BootstrapBackupParams backupParams,
+      @Nullable
+          List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesInfoListNeedBootstrap,
+      String namespaceName,
+      CommonTypes.TableType tableType) {
     BackupRequestParams backupRequestParams;
-    if (bootstrapParams.backupRequestParams != null) {
-      backupRequestParams = new BackupRequestParams(bootstrapParams.backupRequestParams);
+    if (backupParams != null) {
+      backupRequestParams = new BackupRequestParams();
+      backupRequestParams.storageConfigUUID = backupParams.storageConfigUUID;
+      backupRequestParams.parallelism = backupParams.parallelism;
     } else {
       // In case the user does not pass the backup parameters, use the default values.
       backupRequestParams = new BackupRequestParams();
+      backupRequestParams.customerUUID = Customer.get(sourceUniverse.getCustomerId()).getUuid();
       // Use the last storage config used for a successful backup as the default one.
       Optional<Backup> latestCompletedBackupOptional =
           Backup.fetchLatestByState(backupRequestParams.customerUUID, Backup.BackupState.Completed);
-      if (!latestCompletedBackupOptional.isPresent()) {
+      if (latestCompletedBackupOptional.isEmpty()) {
         throw new RuntimeException(
-            "bootstrapParams in XClusterConfigCreateFormData is null, and storageConfigUUID "
+            "backupParams in XClusterConfigCreateFormData is null, and storageConfigUUID "
                 + "cannot be determined based on the latest successful backup");
       }
-      backupRequestParams.storageConfigUUID = latestCompletedBackupOptional.get().storageConfigUUID;
+      backupRequestParams.storageConfigUUID =
+          latestCompletedBackupOptional.get().getStorageConfigUUID();
       log.info(
           "storageConfigUUID {} will be used for bootstrapping",
           backupRequestParams.storageConfigUUID);
     }
     // These parameters are pre-set. Others either come from the user, or the defaults are good.
-    backupRequestParams.universeUUID = sourceUniverse.universeUUID;
-    backupRequestParams.customerUUID = Customer.get(sourceUniverse.customerId).uuid;
-    backupRequestParams.backupType = tablesInfoListNeedBootstrap.get(0).getTableType();
+    backupRequestParams.setUniverseUUID(sourceUniverse.getUniverseUUID());
+    backupRequestParams.customerUUID = Customer.get(sourceUniverse.getCustomerId()).getUuid();
+    backupRequestParams.backupType = tableType;
     backupRequestParams.timeBeforeDelete = TIME_BEFORE_DELETE_BACKUP_MS;
     backupRequestParams.expiryTimeUnit = com.yugabyte.yw.models.helpers.TimeUnit.MILLISECONDS;
     // Set to true because it is a beta version of bootstrapping, and we need to debug it.
@@ -506,23 +908,22 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     }
     backupRequestParams.keyspaceTableList = new ArrayList<>();
     BackupRequestParams.KeyspaceTable keyspaceTable = new BackupRequestParams.KeyspaceTable();
-    keyspaceTable.keyspace = tablesInfoListNeedBootstrap.get(0).getNamespace().getName();
+    keyspaceTable.keyspace = namespaceName;
     if (backupRequestParams.backupType != CommonTypes.TableType.PGSQL_TABLE_TYPE) {
       List<MasterDdlOuterClass.ListTablesResponsePB.TableInfo> tablesNeedBootstrapInfoList =
-          tablesInfoListNeedBootstrap
-              .stream()
+          tablesInfoListNeedBootstrap.stream()
+              // Filter out index tables because backup will include them automatically once their
+              // main tables are being backed up.
               .filter(
                   tableInfo ->
                       tableInfo.getRelationType() != MasterTypes.RelationType.INDEX_TABLE_RELATION)
-              .collect(Collectors.toList());
+              .toList();
       keyspaceTable.tableNameList =
-          tablesNeedBootstrapInfoList
-              .stream()
+          tablesNeedBootstrapInfoList.stream()
               .map(MasterDdlOuterClass.ListTablesResponsePB.TableInfo::getName)
               .collect(Collectors.toList());
       keyspaceTable.tableUUIDList =
-          tablesNeedBootstrapInfoList
-              .stream()
+          tablesNeedBootstrapInfoList.stream()
               .map(tableInfo -> Util.getUUIDRepresentation(tableInfo.getId().toStringUtf8()))
               .collect(Collectors.toList());
     }
@@ -531,7 +932,10 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
   }
 
   static RestoreBackupParams getRestoreBackupParams(
-      Universe targetUniverse, BackupRequestParams backupRequestParams, Backup backup) {
+      Universe sourceUniverse,
+      Universe targetUniverse,
+      BackupRequestParams backupRequestParams,
+      Backup backup) {
     RestoreBackupParams restoreTaskParams = new RestoreBackupParams();
     // For the following parameters the default values will be used:
     //    restoreTaskParams.alterLoadBalancer = true
@@ -540,25 +944,25 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     //    public String newOwner = null
     // The following parameters are set. For others, the defaults are good.
     restoreTaskParams.customerUUID = backupRequestParams.customerUUID;
-    restoreTaskParams.universeUUID = targetUniverse.universeUUID;
-    restoreTaskParams.kmsConfigUUID = backupRequestParams.kmsConfigUUID;
-    if (restoreTaskParams.kmsConfigUUID != null) {
-      restoreTaskParams.actionType = RestoreBackupParams.ActionType.RESTORE;
-    } else {
-      restoreTaskParams.actionType = RestoreBackupParams.ActionType.RESTORE_KEYS;
+    restoreTaskParams.setUniverseUUID(targetUniverse.getUniverseUUID());
+    if (sourceUniverse.getUniverseDetails().encryptionAtRestConfig != null) {
+      restoreTaskParams.kmsConfigUUID =
+          sourceUniverse.getUniverseDetails().encryptionAtRestConfig.kmsConfigUUID;
     }
+    restoreTaskParams.actionType = RestoreBackupParams.ActionType.RESTORE;
     restoreTaskParams.enableVerboseLogs = backupRequestParams.enableVerboseLogs;
     restoreTaskParams.storageConfigUUID = backupRequestParams.storageConfigUUID;
     restoreTaskParams.useTablespaces = backupRequestParams.useTablespaces;
     restoreTaskParams.parallelism = backupRequestParams.parallelism;
     restoreTaskParams.disableChecksum = backupRequestParams.disableChecksum;
-    restoreTaskParams.category = backup.category;
+    restoreTaskParams.category = backup.getCategory();
+    restoreTaskParams.prefixUUID = UUID.randomUUID();
     // Set storage info.
     restoreTaskParams.backupStorageInfoList = new ArrayList<>();
     RestoreBackupParams.BackupStorageInfo backupStorageInfo =
         new RestoreBackupParams.BackupStorageInfo();
     backupStorageInfo.backupType = backupRequestParams.backupType;
-    List<BackupTableParams> backupList = backup.getBackupInfo().backupList;
+    List<BackupTableParams> backupList = backup.getBackupParamsCollection();
     if (backupList == null) {
       throw new RuntimeException("backup.getBackupInfo().backupList must not be null");
     }
@@ -587,5 +991,103 @@ public class CreateXClusterConfig extends XClusterConfigTaskBase {
     restoreTaskParams.backupStorageInfoList.add(backupStorageInfo);
 
     return restoreTaskParams;
+  }
+
+  public void createTransferXClusterCertsCopyTasks(XClusterConfig xClusterConfig) {
+    createTransferXClusterCertsCopyTasks(xClusterConfig, xClusterConfig.getReplicationGroupName());
+  }
+
+  /**
+   * Transfer source universe certs -> target universe. Also, target universe certs -> source
+   * universe if db scoped.
+   *
+   * @param xClusterConfig config with source and target universe to transfer certs.
+   * @param replicationGroupName name of the replication group for xClusterConfig.
+   */
+  public void createTransferXClusterCertsCopyTasks(
+      XClusterConfig xClusterConfig, String replicationGroupName) {
+    Universe sourceUniverse = Universe.getOrBadRequest(xClusterConfig.getSourceUniverseUUID());
+    Universe targetUniverse = Universe.getOrBadRequest(xClusterConfig.getTargetUniverseUUID());
+    Optional<File> sourceCertificate =
+        getOriginCertficateIfNecessary(sourceUniverse, targetUniverse);
+
+    sourceCertificate.ifPresent(
+        cert ->
+            createTransferXClusterCertsCopyTasks(
+                targetUniverse.getNodes(), replicationGroupName, cert, targetUniverse));
+    if (xClusterConfig.getType() == ConfigType.Db) {
+      Optional<File> targetCertificate =
+          getOriginCertficateIfNecessary(targetUniverse, sourceUniverse);
+      targetCertificate.ifPresent(
+          cert ->
+              createTransferXClusterCertsCopyTasks(
+                  sourceUniverse.getNodes(), replicationGroupName, cert, sourceUniverse));
+    }
+  }
+
+  protected void createPitrConfigIfRequired(
+      XClusterConfig xClusterConfig,
+      Universe universe,
+      TableType tableType,
+      String dbName,
+      @Nullable DrConfigCreateForm.PitrParams pitrParams) {
+    long retentionPeriodSeconds;
+    long snapshotIntervalSeconds;
+    if (xClusterConfig.isUsedForDr() && Objects.nonNull(pitrParams)) {
+      retentionPeriodSeconds = pitrParams.retentionPeriodSec;
+      snapshotIntervalSeconds = pitrParams.snapshotIntervalSec;
+    } else {
+      retentionPeriodSeconds =
+          confGetter
+              .getConfForScope(universe, UniverseConfKeys.txnXClusterPitrDefaultRetentionPeriod)
+              .getSeconds();
+      snapshotIntervalSeconds =
+          confGetter
+              .getConfForScope(universe, UniverseConfKeys.txnXClusterPitrDefaultSnapshotInterval)
+              .getSeconds();
+    }
+    log.info(
+        "Using retentionPeriodSeconds={} and snapshotIntervalSeconds={} as PITR params",
+        retentionPeriodSeconds,
+        snapshotIntervalSeconds);
+    Optional<PitrConfig> pitrConfigOptional =
+        PitrConfig.maybeGet(universe.getUniverseUUID(), tableType, dbName);
+    if (pitrConfigOptional.isPresent()) {
+      // Only delete and recreate if the PITR config parameters differ from taskParams.
+      if (pitrConfigOptional.get().getRetentionPeriod() != retentionPeriodSeconds
+          || pitrConfigOptional.get().getScheduleInterval() != snapshotIntervalSeconds) {
+        log.info(
+            "Deleting the existing PITR config and creating a new one with the new"
+                + " parameters");
+        createDeletePitrConfigTask(
+            pitrConfigOptional.get().getUuid(),
+            universe.getUniverseUUID(),
+            false /* ignoreErrors */);
+        // We mark this PITR config as not created during DR as it existed before DR with
+        // different params.
+        // In Future, we will set the PITR config with old params if it not required by DR.
+        createCreatePitrConfigTask(
+            universe,
+            dbName,
+            tableType,
+            retentionPeriodSeconds,
+            snapshotIntervalSeconds,
+            xClusterConfig,
+            false /* createdForDr */);
+      } else {
+        // Reusing the existing PITR config.
+        createAddExistingPitrToXClusterConfig(xClusterConfig, pitrConfigOptional.get());
+      }
+    } else {
+      log.info("Creating a new PITR config");
+      createCreatePitrConfigTask(
+          universe,
+          dbName,
+          tableType,
+          retentionPeriodSeconds,
+          snapshotIntervalSeconds,
+          xClusterConfig,
+          true /* createdForDr */);
+    }
   }
 }
